removed white space from the bottom of the page, still missing logo animation and fix for the spotify app image

--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -185,9 +185,8 @@ nav {
 
 #app img {
   float: right;
-  position: relative;
+  position: absolute;
   width: 30%;
-  left: -100px;
-  top: -550px;
-  z-index: 0;
+  left: 750px;
+  top: 1420px;
 }
